<resources>
    <string name="app_name">ToDoApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_tasks_bottom_bar">All</string>
    <string name="completed_tasks_bottom_bar">Completed</string>
    <string name="search">Search</string>
    <string name="filter_button_title">Filter</string>
    <string name="task_title_hint">Task Title</string>
    <string name="task_description_hint">Task Description</string>
    <string name="task_due_date_hint">Due Date</string>
    <string name="urgent_checkbox_text">Urgent</string>
    <string name="complete_checkbox_text">Complete</string>
    <string name="delete_button_title">Delete</string>
    <string name="completed_tasks_fragment_title">Completed Tasks</string>
    <string name="fab_content_desc">Add a new task</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="mark_as_urgent">Mark as urgent</string>
    <string name="select_date">Select Date:</string>
    <string name="due_date_error">Please select a due date</string>
    <string name="add_task_button">Add Task</string>
    <string name="date_picker_text">JAN 01, 2020</string>
    <string name="complete_button_title">Mark as Completed</string>
    <string name="completed_task_toolbar_title">Completed Tasks</string>
    <string name="confirmation_title">Are you sure?</string>
    <string name="confirmation_message">Are you sure you want to delete the task?</string>
    <string name="cancel">Cancel</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="no_results_found">No Results Found</string>
    <string name="no_items_to_display">No Items to Display</string>
    <string name="error_title_required">Title is required</string>
    <string name="error_description_required">Description is required</string>
    <string name="successfully_task_added">Task added successfully</string>
    <string name="filter_by_text">Filter by</string>
    <string name="upcoming_text">Upcoming</string>
    <string name="past_due_text">Past Due</string>
    <string name="all_tasks_text">All Tasks</string>
    <string name="successfully_task_deleted">Task deleted successfully</string>
    <string name="successfully_task_completed">The task is marked as completed</string>
    <string name="task_type_argent">Argent</string>
    <string name="task_type_others">Others</string>

</resources>